Add some dependencies

--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/erikrios/my-quiz-backend/issues"
   },
-  "homepage": "https://github.com/erikrios/my-quiz-backend#readme"
+  "homepage": "https://github.com/erikrios/my-quiz-backend#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.5.0"
+  }
 }
