--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
   },
   "homepage": "https://github.com/erikrios/my-quiz-backend#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "config": "^3.3.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "joi": "^17.4.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.5.0"
